force-app/main/default/objects/clariti__FinancialEventLog__c/clariti__FinancialEventLog__c.object-meta.xml
<CustomObject>
    <label>Financial Event Log</label>
    <nameField>
        <displayFormat>FIN-LOG-{0000000000}</displayFormat>
        <label>Financial Event Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>