force-app/main/default/objects/clariti__FinancialEventLog__c/fields/clariti__ApexName__c.field-meta.xml
<CustomField>
    <fullName>clariti__ApexName__c</fullName>
    <label>Apex Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>