force-app/main/default/objects/clariti__FinancialEventLog__c/fields/clariti__DetailedMessage__c.field-meta.xml
<CustomField>
    <fullName>clariti__DetailedMessage__c</fullName>
    <label>Detailed Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>