force-app/main/default/objects/clariti__FinancialEventLog__c/fields/clariti__Message__c.field-meta.xml
<CustomField>
    <fullName>clariti__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>