force-app/main/default/objects/clariti__FinancialEventLog__c/fields/clariti__RichTextMessage__c.field-meta.xml
<CustomField>
    <fullName>clariti__RichTextMessage__c</fullName>
    <label>Rich Text Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>