force-app/main/default/objects/clariti__FinancialEventLog__c/fields/clariti__Severity__c.field-meta.xml
<CustomField>
    <fullName>clariti__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>